# data-driven-quad-control

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci_workflow.yml  code_quality.yml  test_release.yml  tests.yml
config/: nonlinear_dd_mpc_params.yaml
configs/comparison/: controller_comparison_config.yaml
configs/controllers/tracking/: tracking_controller_params.yaml
configs/data_driven_mpc/: dd_mpc_controller_params.yaml  dd_mpc_grid_search_params.yaml
configs/drone/: cf2x_drone_params.yaml
configs/plots/: base_plot_params.yaml  comparison_plot_params.yaml
examples/: drone_ctbr_controller_example.py  drone_tracking_controller_example.py
examples/controllers/: ctbr_controller_example.py
models/demo/: ctbr_fixed_yaw_model_1000.pt
models/demo_ctbr_fixed_yaw/: cfgs.json  model_1500.pt
src/data_driven_quad_control/comparison/: controller_comparison.py  controller_comparison_plot.py
src/data_driven_quad_control/comparison/utilities/: comparison_config_loader.py  controller_comparison_config.py  dd_mpc_initial_data_collection.py  parallel_controller_sim.py
src/data_driven_quad_control/comparison/utilities/controller_workers/: dd_mpc_worker.py  rl_worker.py  tracking_worker.py
src/data_driven_quad_control/controllers/ctbr/: ctbr_controller.py  ctbr_controller_config.py
src/data_driven_quad_control/controllers/ctbr/config/: ctbr_controller_params.yaml
src/data_driven_quad_control/controllers/tracking/: tracking_controller.py  tracking_controller_config.py
src/data_driven_quad_control/controllers/tracking/config/: tracking_controller_params.yaml
src/data_driven_quad_control/data_driven_mpc/: dd_mpc_controller_eval.py  dd_mpc_param_grid_search.py
src/data_driven_quad_control/data_driven_mpc/config/: nonlinear_dd_mpc_params.yaml
src/data_driven_quad_control/data_driven_mpc/utilities/: drone_initial_data_collection.py  drone_system_model.py
src/data_driven_quad_control/data_driven_mpc/utilities/param_grid_search/: controller_creation.py  controller_evaluation.py  grid_search_param_load.py  grid_search_param_loader.py  initial_data_collection_cache.py  isolated_execution.py  parallel_grid_search.py  parallel_worker.py  param_grid_search_config.py  resource_usage_logging.py  results_writer.py
src/data_driven_quad_control/drone_config/: drone_params.py
src/data_driven_quad_control/drone_config/config/: cf2x_drone_params.yaml
src/data_driven_quad_control/envs/: hover_env.py  hover_env_config.py
src/data_driven_quad_control/envs/config/: hover_env_config.py
src/data_driven_quad_control/learning/: eval.py  train.py
src/data_driven_quad_control/learning/config/: hover_ppo_config.py  reward_config.py
src/data_driven_quad_control/utilities/: config_utils.py  control_data_plotting.py  drone_environment.py  drone_system_model.py  drone_tracking_controller.py  math_utils.py  vectorized_pid_controller.py
src/envs/: hover_env.py
src/utilities/: drone_environment.py  drone_system_model.py  math_utils.py
tests/: conftest.py  mocks.py
tests/controller_comparison_tests/: conftest.py  test_controller_comparison.py
tests/controller_comparison_tests/config/: test_controller_comparison_config.yaml
tests/controller_comparison_tests/config/comparison/: test_controller_comparison_config.yaml
tests/controller_comparison_tests/config/data_driven_mpc/: test_dd_mpc_controller_params.yaml
tests/controller_comparison_tests/utility_tests/: test_comparison_config_loader.py  test_dd_mpc_initial_data_collection.py  test_parallel_controller_sim.py
tests/controller_comparison_tests/utility_tests/controller_workers_tests/: test_dd_mpc_worker.py  test_rl_worker.py  test_tracking_worker.py
tests/controller_tests/: drone_ctbr_controller_test.py  test_drone_ctbr_controller.py  test_drone_tracking_controller.py
tests/data_driven_mpc_tests/: conftest.py  test_dd_mpc_controller_eval.py  test_dd_mpc_param_grid_search.py  test_system_model.py
tests/data_driven_mpc_tests/config/: test_controller_params.yaml  test_grid_search_params.yaml
tests/data_driven_mpc_tests/utility_tests/: test_initial_data_collection.py  test_system_model.py
tests/data_driven_mpc_tests/utility_tests/grid_search_utility_tests/: conftest.py  test_controller_creation.py  test_controller_evaluation.py  test_grid_search_param_load.py  test_grid_search_param_loader.py  test_initial_data_collection_cache.py  test_isolated_execution.py  test_parallel_grid_search.py  test_parallel_worker.py  test_results_writer.py
tests/env_tests/: test_hover_env.py
tests/utility_tests/: test_control_data_plotting.py  test_drone_utilities.py  test_math_utils.py
