[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "data_driven_quad_control"
version = "0.1.0"
authors = [
  { name = "Pável A. Campos-Peña", email = "pcamposp@uni.pe" }
]
description = "Data-driven control for drones in Genesis: data-driven MPC and reinforcement learning"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10.0"
dependencies = [
  "genesis_world @ git+https://github.com/Genesis-Embodied-AI/Genesis",
  "numpy >=1.26.4",
  "torch >=2.6.0",
  "rsl-rl-lib >= 2.3.1",
  "tensorboard",
  "direct_data_driven_mpc @ git+https://github.com/pavelacamposp/direct_data_driven_mpc",
]
license = "MIT AND Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["drone", "control-systems", "data-driven", "reinforcement-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pavelacamposp/data_driven_quad_control.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 79
extend-exclude = ["__pycache__"]

[tool.ruff.lint]
extend-select = ["I", "D", "B", "C4", "E", "F", "W"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D205",
  "D212",
  "D400",
  "D413",
  "D415",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
warn_unused_ignores = true
disable_error_code = ["type-arg"]

[tool.coverage.run]
# Ignore opencv-python created files
omit = [
  "config.py",
  "config-3.py",
]
